--- a/src/themes/reen/style.css
+++ b/src/themes/reen/style.css
@@ -12888,15 +12888,16 @@ figure.reen-image-block figcaption {
 .format-link p a {
   border: none; }
 
-.comment-form p.comment-form-cookies-consent input, .comment-form p.comment-form-cookies-consent label {
-  width: auto; }
-
-.comment-form p.comment-form-cookies-consent label {
-  float: none;
-  display: inline-block;
-  margin-left: 5px;
-  margin-bottom: 0;
-  font-size: 16px; }
+.comment-form p.comment-form-cookies-consent {
+  padding-bottom: 0; }
+  .comment-form p.comment-form-cookies-consent input, .comment-form p.comment-form-cookies-consent label {
+    width: auto; }
+  .comment-form p.comment-form-cookies-consent label {
+    float: none;
+    display: inline-block;
+    margin-left: 5px;
+    margin-bottom: 0;
+    font-size: 16px; }
 
 .popular-posts-carousel.owl-carousel:hover .owl-prev,
 .popular-posts-carousel.owl-carousel:hover .owl-next,
